# mp2-lab3-postfix

./: CMakeLists.txt  Отчёт по 3 лабе.docx
include/: TStack.h  postfix.h
sample/: CMakeLists.txt  sample_postfix.cpp
source/: CMakeLists.txt  Postfix.cpp
test/: CMakeLists.txt  test_postfix.cpp  test_tstack.cpp
